[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-review-agent"
version = "0.1.0"
description = "Autonomous PR review agent using LangGraph, ChromaDB, and MCP"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "anthropic>=0.50.0",
    "langchain-ollama>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
    "PyGithub>=2.0.0",
    "gitpython>=3.1.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
pr-review = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]
